Fixes a blocking bug due to using non-exported classes for XML